# rbac_service

./: README.md  manage.py  pyproject.toml
openspec/: project.md
openspec/changes/add-custom-user-model/: tasks.md
openspec/changes/add-rbac-access-view/: tasks.md
openspec/changes/add-rbac-admin-views/: proposal.md  tasks.md
openspec/changes/add-rbac-core/: tasks.md
openspec/changes/add-rbac-core/specs/rbac/: spec.md
openspec/changes/add-user-auth-views/: tasks.md
openspec/changes/add-user-auth-views/specs/user-auth/: spec.md
openspec/changes/archive/2026-01-17-add-custom-user-model/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-17-add-custom-user-model/specs/user-auth/: spec.md
openspec/changes/archive/2026-01-17-add-rbac-access-view/: proposal.md  tasks.md
openspec/changes/archive/2026-01-17-add-rbac-access-view/specs/rbac/: spec.md
openspec/changes/archive/2026-01-17-add-rbac-admin-views/: tasks.md
openspec/changes/archive/2026-01-17-add-rbac-core/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-01-17-add-user-auth-views/: proposal.md  tasks.md
openspec/specs/rbac/: spec.md
openspec/specs/user-auth/: spec.md
rbac/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
rbac/migrations/: 0001_initial.py  0002_userrole.py
rbac_service/: asgi.py  settings.py  urls.py  wsgi.py
users/: admin.py  managers.py  models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
(+1 files in other folders)
